[tool.poetry]
name = "bookbot"
version = "0.1.0"
description = "Test github project"
authors = ["Ash Griffiths <46426454+AshGriffiths@users.noreply.github.com>"]
license = "Unlicense"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
